[project]
name = "physics-uni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.uv]
package = false

[tool.ruff]
fix = true
